fixed wordwrapping

--- a/client/tag/css/main.css
+++ b/client/tag/css/main.css
@@ -47,3 +47,7 @@
 .container{
     margin-top: 100px;
 }
+
+.dbwrap{
+    white-space: pre-wrap;
+}
